[package]
name = "waitlift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["std_rng"] }
clap = { version = "4.4", features = ["cargo"] }
rayon = "1.8.0"
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3.29"
fs_extra = "1.3.0"

